2005-05-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* viewmodel.cpp make_mesh.cpp/h model.cpp/h modelrender*.shader
	  - some shader improvements
	  - better modelview
	  - mesh creation helper functions for testing added

2005-05-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* texture.cpp/h and clients
	  - new mapping/clamping interface for texture class
	  - fixed texture usage bugs
	* model.cpp/h and clients
	  - now vertex and pixel shaders can be used featuring
	    per pixel ambient, diffuse and specular lighting
	    with normal maps, for per pixel detail of surfaces.
	    (many small things still need to be done)

2005-05-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* coastmap.cpp/h
	  - finally fixed ALL map/coastline generation bugs.
	    now all coastlines are correct!

2005-05-07  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* coastmap.cpp
	  - fixed all bugs except one unimportant.
	  - 3d coast rendering works again.

2005-05-06  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* coastmap.cpp/.h
	  - many test, hacks and fixes to make coastline generation code
	    work again. Only one bug remains, many old bugs are fixed now.
	    coastlines could be reenabled for 3d rendering again now.

2005-04-24  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* system.h/cpp
	  - now supports printf style parameters for myassert and
	    add_console
	* coastmap.h/cpp
	  - improved coastline generation

2005-04-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* each sea_object has a reference to game, removing tons of
	  "game& gm" parameters of function calls.
	
2005-04-13  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* fixed bump mapping
	* now ambient is read and used, so we have dynamic ambient light

2005-04-10  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* introduced 4d vector and operations
	* changed texture class interface
	* new model file format with reading and writing
	* now can read LUMINANCE textures